Add title, saved games, walking animation, fix a door bug.

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <!-- Without this '×' may not be rendered correctly //-->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> //-->
     <style>
     body {
         background-color: black;
@@ -45,7 +46,7 @@
 </head>
 <body class="pagebody">
 <div class="js-mainGame  mainGame">
-    <div class="js-loading loading" style="display: none">
+    <div class="js-loading loading" style="display: none;">
         Loading...
     </div>
     <script>
