Bug fixes, more map updates, dialogue logic.

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
         position: relative;
         margin-left: auto;
         margin-right: auto;
-        padding-top: 2px;
-        width: 960px;
-        min-height: 540px;
+        padding-top: 0;
+        width: 768px;
+        min-height: 672px;
         background-color: black;
         background-repeat: repeat;
         top: 0px;
