--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> //-->
     <style>
     body {
-        background-color: black;
+        background: url('gfx/darkstone.png');
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -20,6 +20,7 @@
         min-height: 672px;
         background-color: black;
         background-repeat: repeat;
+        border: 5px solid gold;
         top: 0px;
         -moz-user-select: none;
         -khtml-user-select: none;
@@ -46,7 +47,7 @@
 </head>
 <body class="pagebody">
 <div class="js-mainGame  mainGame">
-    <div class="js-loading loading" style="display: none;">
+    <div class="js-loading loading" style="display: none; padding: 20px; font-family: sans-serif;">
         Loading...
     </div>
     <script>
