Don't allow using tools at exactly 0 magic/spirit energy.

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Adventure Game</title>
 </head>
-<body class="pagebody">
+<body>
 <div class="js-mainGame  mainGame">
     <div class="js-loading loading" style="display: none; padding: 20px; font-family: sans-serif;">
         Loading...
