Add version parameter to assets to break cache on updates.

--- a/public/index.html
+++ b/public/index.html
@@ -42,22 +42,30 @@
         -ms-interpolation-mode: nearest-neighbor;
     }
     </style>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Adventure Game</title>
 </head>
 <body>
 <div class="js-mainGame  mainGame">
-    <div class="js-loading loading" style="display: none; padding: 20px; font-family: sans-serif;">
-        Loading...
-    </div>
     <script>
+        window.version = '0.1.0';
         // Only show the loading text if it takes more than .2 seconds to load
         setTimeout(function () {
             if (document.querySelector('.js-gameContent').style.display === 'none') {
                 document.querySelector('.js-loading').style.display = '';
             }
         }, 200);
+        const mainScript = document.createElement('script');
+        mainScript.src = `client.js?v=${version}`;
+        document.body.append(mainScript);
+        const mainStyles = document.createElement('link');
+        mainStyles.type = 'text/css';
+        mainStyles.rel = 'stylesheet'
+        mainStyles.href = `styles.css?v=${version}`;
+        document.head.append(mainStyles);
     </script>
+    <div class="js-loading loading" style="display: none; padding: 20px; font-family: sans-serif;">
+        Loading...
+    </div>
     <div class="js-gameContent gameContent" style="display: none">
         <div class="js-mouseContainer js-mainCanvasContainer mainCanvasContainer">
             <canvas
@@ -69,5 +77,4 @@
     </div>
 </div>
 </body>
-<script src="client.js"></script>
 </html>
