Add preview image, add stub for World Tree dungeon.

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,12 @@
     }
     </style>
     <title>Adventure Game</title>
+    <meta property='og:title' content='Spirit Quest'/>
+    <meta property='og:image' content='https://chrisflash.com/alttptest/preview.png'>
+    <meta property='og:description' content='SNES Zelda Inspired Browser Game'/>
+    <meta property='og:image:width' content='1345' />
+    <meta property='og:image:height' content='1177' />
+    <meta property='og:type' content='website'/>
 </head>
 <body>
 <div class="js-mainGame  mainGame">
