Fix game wasn't resizing on load.

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
             document.getElementsByClassName('mainGame')[0].style.transform = `scale(${scale}`;
         }
         window.onresize = resizeGame;
+        resizeGame();
         // Only show the loading text if it takes more than .2 seconds to load
         setTimeout(function () {
             if (document.querySelector('.js-gameContent').style.display === 'none') {
