--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,13 @@
         image-rendering: pixelated;                 /* Awesome future-browsers       */
         -ms-interpolation-mode: nearest-neighbor;
     }
+    input[type=range][orient=vertical] {
+        writing-mode: vertical-lr;
+        direction: rtl;
+        appearance: slider-vertical;
+        width: 16px;
+        vertical-align: bottom;
+    }
     </style>
     <title>Adventure Game</title>
     <meta property='og:title' content='Spirit Quest'/>
@@ -90,16 +97,45 @@
         </div>
     </div>
 </div>
-    <div id="muteIcon" style="position: absolute; left: 4px; top:4px; font-size: 36px; cursor: pointer;">
+    <div style="position: absolute; left: 8px; top:12px;">
+        <a
+            title="Join Our Discord"
+            href="https://discord.gg/kQP23tj8Ew"
+            target="_blank"
+        >
+            <div style="width: 36px; background-color: #5865F2; height: 36px; border-radius: 18px; text-align: center; margin-bottom: 12px;">
+                <svg style="width: 24px; margin-top: 9px; "xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
+            </div>
+        </a>
+        <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px;">
+            <a
+                style="font-size: 36px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: -8px;"
+                title="Leave Feedback"
+                href="https://docs.google.com/forms/d/e/1FAIpQLSd7Ld_MUMQ_BdZhqq53mJPCAPODeEivZpi5KU41aaalSlWRiA/viewform"
+                target="_blank"
+            >🗎</a>
+        </div>
+        <div style="width: 36px; text-align: center;">
+            <div id="muteIcon" style="display: inline-block; font-size: 36px; cursor: pointer; margin-left: -4px;"></div>
+        </div>
+        <div style="width: 36px; text-align: center;">
+            <input id="volume" type="range" orient="vertical" />
+        </div>
     </div>
     <script>
         const muteButton = document.getElementById('muteIcon');
-        // Special handling for mute button.
+        const volumeSlider = document.getElementById('volume');
         const importedSettings = JSON.parse(window.localStorage.getItem('settings') || '{}');
-        let muteAllSounds = importedSettings.muteAllSounds || false;
-        function refreshMuteButton(newValue) {
-            muteAllSounds = newValue;
-            muteButton.innerHTML = muteAllSounds ? '🔇' : '🔊';
+        // These sound settings are used before the main game js has initialized.
+        // This way the player can still adjust their sound settings while the game is loading.
+        const localSoundSettings = {
+            muteAllSounds: importedSettings.muteAllSounds || false,
+            globalVolume: importedSettings.globalVolume ?? 1,
+        }
+        function refreshSoundControls(soundSettings) {
+            muteButton.innerHTML = soundSettings.muteAllSounds ? '🔇' : '🔊';
+            muteButton.title = soundSettings.muteAllSounds ? 'Unmute' : 'Mute';
+            volumeSlider.value = Math.round(100 * soundSettings.globalVolume);
         }
         muteButton.onclick = function () {
             // Use toggleAllSounds once everything is loaded.
@@ -111,12 +147,38 @@
                 return;
             }
             // Update muteAllSounds directly if still loading.
-            refreshMuteButton(!muteAllSounds);
+            localSoundSettings.muteAllSounds = !localSoundSettings.muteAllSounds;
+            refreshSoundControls(localSoundSettings);
             window.localStorage.setItem('settings', JSON.stringify(
-                {...importedSettings, muteAllSounds}
+                {...importedSettings, ...localSoundSettings}
             ));
         }
-        refreshMuteButton(muteAllSounds);
+        volumeSlider.onchange = function () {
+            volumeSlider.blur();
+            localSoundSettings.globalVolume = volumeSlider.value / 100;
+            if (window.getState && window.setGlobalVolume) {
+                const state = getState();
+                if (state && state.settings) {
+                    window.setGlobalVolume(state, globalVolume);
+                }
+                return;
+            }
+            refreshSoundControls(localSoundSettings);
+            window.localStorage.setItem('settings', JSON.stringify(
+                {...importedSettings, ...localSoundSettings}
+            ));
+        }
+        volumeSlider.oninput = function () {
+            globalVolume = volumeSlider.value / 100;
+            if (window.getState && window.setGlobalVolume) {
+                const state = getState();
+                if (state && state.settings) {
+                    window.setGlobalVolume(state, globalVolume);
+                }
+                return;
+            }
+        }
+        refreshSoundControls(localSoundSettings);
     </script>
 </body>
 </html>
