--- a/public/index.html
+++ b/public/index.html
@@ -107,14 +107,25 @@
                 <svg style="width: 24px; margin-top: 9px; "xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
             </div>
         </a>
-        <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px;">
-            <a
-                style="font-size: 36px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: -8px;"
-                title="Leave Feedback"
-                href="https://docs.google.com/forms/d/e/1FAIpQLSd7Ld_MUMQ_BdZhqq53mJPCAPODeEivZpi5KU41aaalSlWRiA/viewform"
-                target="_blank"
-            >🗎</a>
+        <a
+            title="Leave Feedback"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSd7Ld_MUMQ_BdZhqq53mJPCAPODeEivZpi5KU41aaalSlWRiA/viewform"
+            target="_blank"
+        >
+            <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; margin-bottom: 12px;">
+                <div
+                    style="font-size: 36px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: -8px;"
+                >🗎</div>
+            </div>
+        </a>
+        <div
+            id="controlsButton"
+            title="View Controls"
+            style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; cursor: pointer"
+        >
+            <div style="display: inline-block;font-size: 28px;;margin-left: -1px;margin-top: -4px;">🎮</div>
         </div>
+
         <div style="width: 36px; text-align: center;">
             <div id="muteIcon" style="display: inline-block; font-size: 36px; cursor: pointer; margin-left: -4px;"></div>
         </div>
@@ -123,6 +134,7 @@
         </div>
     </div>
     <script>
+        const controlsButton = document.getElementById('controlsButton');
         const muteButton = document.getElementById('muteIcon');
         const volumeSlider = document.getElementById('volume');
         const importedSettings = JSON.parse(window.localStorage.getItem('settings') || '{}');
@@ -137,7 +149,16 @@
             muteButton.title = soundSettings.muteAllSounds ? 'Unmute' : 'Mute';
             volumeSlider.value = Math.round(100 * soundSettings.globalVolume);
         }
-        muteButton.onclick = function () {
+        controlsButton.onclick = () => {
+            if (window.getState && window.toggleShowControls) {
+                const state = getState();
+                if (state) {
+                    window.toggleShowControls(state);
+                }
+                return;
+            }
+        };
+        muteButton.onclick = () => {
             // Use toggleAllSounds once everything is loaded.
             if (window.getState && window.toggleAllSounds) {
                 const state = getState();
@@ -152,8 +173,8 @@
             window.localStorage.setItem('settings', JSON.stringify(
                 {...importedSettings, ...localSoundSettings}
             ));
-        }
-        volumeSlider.onchange = function () {
+        };
+        volumeSlider.onchange = () => {
             volumeSlider.blur();
             localSoundSettings.globalVolume = volumeSlider.value / 100;
             if (window.getState && window.setGlobalVolume) {
@@ -167,8 +188,8 @@
             window.localStorage.setItem('settings', JSON.stringify(
                 {...importedSettings, ...localSoundSettings}
             ));
-        }
-        volumeSlider.oninput = function () {
+        };
+        volumeSlider.oninput = () => {
             globalVolume = volumeSlider.value / 100;
             if (window.getState && window.setGlobalVolume) {
                 const state = getState();
@@ -177,7 +198,7 @@
                 }
                 return;
             }
-        }
+        };
         refreshSoundControls(localSoundSettings);
     </script>
 </body>
