--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 <body>
 <div class="js-mainGame mainGame" style="transform: scale(4);">
     <script>
-        window.version = '0.4.37';
+        window.version = '0.4.38';
         function resizeGame() {
             // This includes 1px padding for the border.
             const scale = Math.max(1, Math.floor(Math.min(window.innerWidth / 257, window.innerHeight / 225)));
@@ -105,7 +105,8 @@
             target="_blank"
         >
             <div style="width: 36px; background-color: #5865F2; height: 36px; border-radius: 18px; text-align: center; margin-bottom: 12px;">
-                <svg style="width: 24px; margin-top: 9px; "xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
+                <!-- This is from https://discord.com/branding -->
+                <svg style="width: 24px; margin-top: 9px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
             </div>
         </a>
         <a
@@ -114,9 +115,8 @@
             target="_blank"
         >
             <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; margin-bottom: 12px;">
-                <div
-                    style="font-size: 36px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: -8px;"
-                >🗎</div>
+                <!-- License: PD. Made by icons8: https://github.com/icons8/windows-10-icons -->
+                <svg style="width: 30px; margin-top: 3px;" viewBox="0 0 32 32"><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M25 28H7V4h12l6 6z"/><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M19 4v6h6"/><path d="M11 21h10v2H11zm0-4h10v2H11zm0-4h10v2H11z"/></svg>
             </div>
         </a>
         <div
@@ -124,7 +124,8 @@
             title="View Controls"
             style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; cursor: pointer"
         >
-            <div style="display: inline-block;font-size: 28px;;margin-left: -1px;margin-top: -4px;">🎮</div>
+            <!-- License: PD. Made by brankic1979: https://brankic1979.com/ -->
+            <svg style="width: 30px; margin-top: 2px;" viewBox="0 -0.5 33 33" xmlns="http://www.w3.org/2000/svg"><path d="M23.014 4.459c-1.416 0-4.166 2-6.5 2s-5.25-2-6.5-2c-8.583 0-13.5 23.082-7.083 23.082 5.417 0 6.146-6.75 13.562-6.75 6 0 9.521 6.668 13.521 6.668 6.416 0 1.584-23-7-23m-13.501 13a4.501 4.501 0 0 1 0-9 4.5 4.5 0 0 1 0 9m11.938-2.5a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3.063 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m0-6a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m-18.001-4.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5"/></svg>
         </div>
 
         <div style="width: 36px; text-align: center;">
