--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,15 @@
         -webkit-user-select: none;
         -o-user-user-select: none;
         cursor: default;
-        transform-origin: top center;
+        transform-origin: center center;
     }
     .loading {
         font-size: 50px;
         color: white;
+    }
+    @font-face {
+        font-family: PixelScript;
+        src: url("gfx/fonts/pixel-script/PixelScriptRegular-0WnDG.otf") format("opentype");
     }
     /* https://stackoverflow.com/questions/7615009/disable-interpolation-when-scaling-a-canvas */
     canvas {
@@ -46,6 +50,7 @@
         writing-mode: vertical-lr;
         direction: rtl;
         width: 16px;
+        height: 128px;
         vertical-align: bottom;
     }
     /* This causes warnings in Chrome, but might be necessary in other browsers. */
@@ -60,6 +65,7 @@
     <meta property='og:type' content='website'/>
 </head>
 <body>
+<div style="display: flex;flex-direction: column;justify-content: space-around;height: 100%;">
 <div class="js-mainGame mainGame" style="transform: scale(4);">
     <script>
         window.version = '0.4.38';
@@ -98,110 +104,116 @@
         </div>
     </div>
 </div>
-    <div style="position: absolute; left: 8px; top:12px;">
-        <a
-            title="Join Our Discord"
-            href="https://discord.gg/kQP23tj8Ew"
-            target="_blank"
-        >
-            <div style="width: 36px; background-color: #5865F2; height: 36px; border-radius: 18px; text-align: center; margin-bottom: 12px;">
-                <!-- This is from https://discord.com/branding -->
-                <svg style="width: 24px; margin-top: 9px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
-            </div>
-        </a>
-        <a
-            title="Leave Feedback"
-            href="https://docs.google.com/forms/d/e/1FAIpQLSd7Ld_MUMQ_BdZhqq53mJPCAPODeEivZpi5KU41aaalSlWRiA/viewform"
-            target="_blank"
-        >
-            <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; margin-bottom: 12px;">
-                <!-- License: PD. Made by icons8: https://github.com/icons8/windows-10-icons -->
-                <svg style="width: 30px; margin-top: 3px;" viewBox="0 0 32 32"><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M25 28H7V4h12l6 6z"/><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M19 4v6h6"/><path d="M11 21h10v2H11zm0-4h10v2H11zm0-4h10v2H11z"/></svg>
-            </div>
-        </a>
-        <div
-            id="controlsButton"
-            title="View Controls"
-            style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; cursor: pointer"
-        >
-            <!-- License: PD. Made by brankic1979: https://brankic1979.com/ -->
-            <svg style="width: 30px; margin-top: 2px;" viewBox="0 -0.5 33 33" xmlns="http://www.w3.org/2000/svg"><path d="M23.014 4.459c-1.416 0-4.166 2-6.5 2s-5.25-2-6.5-2c-8.583 0-13.5 23.082-7.083 23.082 5.417 0 6.146-6.75 13.562-6.75 6 0 9.521 6.668 13.521 6.668 6.416 0 1.584-23-7-23m-13.501 13a4.501 4.501 0 0 1 0-9 4.5 4.5 0 0 1 0 9m11.938-2.5a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3.063 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m0-6a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m-18.001-4.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5"/></svg>
-        </div>
+</div>
 
-        <div style="width: 36px; text-align: center;">
-            <div id="muteIcon" style="display: inline-block; font-size: 36px; cursor: pointer; margin-left: -4px;"></div>
+<div style="position: absolute; left: 8px; top:12px;">
+    <a
+        title="Join Our Discord"
+        href="https://discord.gg/kQP23tj8Ew"
+        target="_blank"
+    >
+        <div style="width: 36px; background-color: #5865F2; height: 36px; border-radius: 18px; text-align: center; margin-bottom: 12px;">
+            <!-- This is from https://discord.com/branding -->
+            <svg style="width: 24px; margin-top: 9px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
         </div>
-        <div style="width: 36px; text-align: center;">
-            <input id="volume" type="range" orient="vertical" />
+    </a>
+    <a
+        title="Leave Feedback"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSd7Ld_MUMQ_BdZhqq53mJPCAPODeEivZpi5KU41aaalSlWRiA/viewform"
+        target="_blank"
+    >
+        <div style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; margin-bottom: 12px;">
+            <!-- License: PD. Made by icons8: https://github.com/icons8/windows-10-icons -->
+            <svg style="width: 30px; margin-top: 3px;" viewBox="0 0 32 32"><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M25 28H7V4h12l6 6z"/><path fill="none" stroke="#000" stroke-width="2" stroke-miterlimit="10" d="M19 4v6h6"/><path d="M11 21h10v2H11zm0-4h10v2H11zm0-4h10v2H11z"/></svg>
         </div>
+    </a>
+    <div
+        id="controlsButton"
+        title="View Controls"
+        style="width: 36px; height: 36px; text-align: center; background-color: white; border-radius: 18px; cursor: pointer"
+    >
+        <!-- License: PD. Made by brankic1979: https://brankic1979.com/ -->
+        <svg style="width: 30px; margin-top: 2px;" viewBox="0 -0.5 33 33" xmlns="http://www.w3.org/2000/svg"><path d="M23.014 4.459c-1.416 0-4.166 2-6.5 2s-5.25-2-6.5-2c-8.583 0-13.5 23.082-7.083 23.082 5.417 0 6.146-6.75 13.562-6.75 6 0 9.521 6.668 13.521 6.668 6.416 0 1.584-23-7-23m-13.501 13a4.501 4.501 0 0 1 0-9 4.5 4.5 0 0 1 0 9m11.938-2.5a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3.063 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m0-6a1 1 0 1 1 0-2 1 1 0 1 1 0 2m3 3a1 1 0 1 1 0-2 1 1 0 1 1 0 2m-18.001-4.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5"/></svg>
     </div>
-    <script>
-        const controlsButton = document.getElementById('controlsButton');
-        const muteButton = document.getElementById('muteIcon');
-        const volumeSlider = document.getElementById('volume');
-        const importedSettings = JSON.parse(window.localStorage.getItem('settings') || '{}');
-        // These sound settings are used before the main game js has initialized.
-        // This way the player can still adjust their sound settings while the game is loading.
-        const localSoundSettings = {
-            muteAllSounds: importedSettings.muteAllSounds || false,
-            globalVolume: importedSettings.globalVolume ?? 1,
+
+    <div style="width: 36px; text-align: center;">
+        <div id="muteIcon" style="display: inline-block; font-size: 36px; cursor: pointer; margin-left: -4px;"></div>
+    </div>
+    <div style="width: 36px; text-align: center;">
+        <input id="volume" type="range" orient="vertical" />
+    </div>
+    <div style="font-family: PixelScript; color: white; display: none">
+        PixelScript
+    </div>
+</div>
+
+<script>
+    const controlsButton = document.getElementById('controlsButton');
+    const muteButton = document.getElementById('muteIcon');
+    const volumeSlider = document.getElementById('volume');
+    const importedSettings = JSON.parse(window.localStorage.getItem('settings') || '{}');
+    // These sound settings are used before the main game js has initialized.
+    // This way the player can still adjust their sound settings while the game is loading.
+    const localSoundSettings = {
+        muteAllSounds: importedSettings.muteAllSounds || false,
+        globalVolume: importedSettings.globalVolume ?? 1,
+    }
+    function refreshSoundControls(soundSettings) {
+        muteButton.innerHTML = soundSettings.muteAllSounds ? '🔇' : '🔊';
+        muteButton.title = soundSettings.muteAllSounds ? 'Unmute' : 'Mute';
+        volumeSlider.value = Math.round(100 * soundSettings.globalVolume);
+    }
+    controlsButton.onclick = () => {
+        if (window.getState && window.toggleShowControls) {
+            const state = getState();
+            if (state) {
+                window.toggleShowControls(state);
+            }
+            return;
         }
-        function refreshSoundControls(soundSettings) {
-            muteButton.innerHTML = soundSettings.muteAllSounds ? '🔇' : '🔊';
-            muteButton.title = soundSettings.muteAllSounds ? 'Unmute' : 'Mute';
-            volumeSlider.value = Math.round(100 * soundSettings.globalVolume);
+    };
+    muteButton.onclick = () => {
+        // Use toggleAllSounds once everything is loaded.
+        if (window.getState && window.toggleAllSounds) {
+            const state = getState();
+            if (state && state.settings) {
+                window.toggleAllSounds(state);
+            }
+            return;
         }
-        controlsButton.onclick = () => {
-            if (window.getState && window.toggleShowControls) {
-                const state = getState();
-                if (state) {
-                    window.toggleShowControls(state);
-                }
-                return;
-            }
-        };
-        muteButton.onclick = () => {
-            // Use toggleAllSounds once everything is loaded.
-            if (window.getState && window.toggleAllSounds) {
-                const state = getState();
-                if (state && state.settings) {
-                    window.toggleAllSounds(state);
-                }
-                return;
-            }
-            // Update muteAllSounds directly if still loading.
-            localSoundSettings.muteAllSounds = !localSoundSettings.muteAllSounds;
-            refreshSoundControls(localSoundSettings);
-            window.localStorage.setItem('settings', JSON.stringify(
-                {...importedSettings, ...localSoundSettings}
-            ));
-        };
-        volumeSlider.onchange = () => {
-            volumeSlider.blur();
-            localSoundSettings.globalVolume = volumeSlider.value / 100;
-            if (window.getState && window.setGlobalVolume) {
-                const state = getState();
-                if (state && state.settings) {
-                    window.setGlobalVolume(state, globalVolume);
-                }
-                return;
-            }
-            refreshSoundControls(localSoundSettings);
-            window.localStorage.setItem('settings', JSON.stringify(
-                {...importedSettings, ...localSoundSettings}
-            ));
-        };
-        volumeSlider.oninput = () => {
-            globalVolume = volumeSlider.value / 100;
-            if (window.getState && window.setGlobalVolume) {
-                const state = getState();
-                if (state && state.settings) {
-                    window.setGlobalVolume(state, globalVolume);
-                }
-                return;
-            }
-        };
+        // Update muteAllSounds directly if still loading.
+        localSoundSettings.muteAllSounds = !localSoundSettings.muteAllSounds;
         refreshSoundControls(localSoundSettings);
-    </script>
+        window.localStorage.setItem('settings', JSON.stringify(
+            {...importedSettings, ...localSoundSettings}
+        ));
+    };
+    volumeSlider.onchange = () => {
+        volumeSlider.blur();
+        localSoundSettings.globalVolume = volumeSlider.value / 100;
+        if (window.getState && window.setGlobalVolume) {
+            const state = getState();
+            if (state && state.settings) {
+                window.setGlobalVolume(state, globalVolume);
+            }
+            return;
+        }
+        refreshSoundControls(localSoundSettings);
+        window.localStorage.setItem('settings', JSON.stringify(
+            {...importedSettings, ...localSoundSettings}
+        ));
+    };
+    volumeSlider.oninput = () => {
+        globalVolume = volumeSlider.value / 100;
+        if (window.getState && window.setGlobalVolume) {
+            const state = getState();
+            if (state && state.settings) {
+                window.setGlobalVolume(state, globalVolume);
+            }
+            return;
+        }
+    };
+    refreshSoundControls(localSoundSettings);
+</script>
 </body>
 </html>
