Try to get pixel script font to load immediately.

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
     <div style="width: 36px; text-align: center;">
         <input id="volume" type="range" orient="vertical" />
     </div>
-    <div style="font-family: PixelScript; color: white; display: none">
+    <div style="font-family: PixelScript; color: white; opacity: 0; position: absolute; left: -1000px">
         PixelScript
     </div>
 </div>
