--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,7 @@
 <div style="display: flex;flex-direction: column;justify-content: space-around;height: 100%;">
 <div class="js-mainGame mainGame" style="transform: scale(4);">
     <script>
-        window.clientVersion = '0.4.52';
-        window.version = '0.4.50';
+        window.version = '0.4.52';
         function resizeGame() {
             // This includes 1px padding for the border.
             const scale = Math.max(1, Math.floor(Math.min(window.innerWidth / 257, window.innerHeight / 225)));
@@ -84,7 +83,7 @@
             }
         }, 200);
         const mainScript = document.createElement('script');
-        mainScript.src = `client.js?v=${clientVersion}`;
+        mainScript.src = `client.js?v=${version}`;
         document.body.append(mainScript);
         const mainStyles = document.createElement('link');
         mainStyles.type = 'text/css';
