--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </style>
     <title>Adventure Game</title>
     <meta property='og:title' content='Spirit Quest'/>
-    <meta property='og:image' content='preview.png'>
+    <meta property='og:image' content='https://quest.chrisflash.com/preview.png'>
     <meta property='og:description' content='SNES Zelda Inspired Browser Game'/>
     <meta property='og:image:width' content='1345' />
     <meta property='og:image:height' content='1177' />
